Revision history for DBD::Oracle

NEXTRELEASE

  [BUG FIXES]

  - fix serious memory corruption in TAF support (Martin J. Evans)

  - fix finding client in situation where client and server both
    installed but different architectures (patch by H.Merijn Brand)

  [MISCELLANEOUS]

  - hide dr, db and st packages from PAUSE

1.47_00   2012-07-11

  [BUG FIXES]

  - fixed redeclaration of $len in 31lob.t - (Martin J, Evans)

  - RT55028 - stop segfaulting when attempting to read empty lobs
    (Martin J. Evans)

  - RT69059 - Despite OCIPing being documented as added in 10.2 AIX
    does not seem to have it in 10.2 leading to undefined symbol -
    Martin J. Evans

  [DOCUMENTATION]
  - Promoted the troubleshooting for the different architectures to
    POD documents, for easier/prettier access.

  - Added a troubleshooting entry for RT71819 - bound output
    parameters may be returned in the wrong order (Martin J. Evans)

1.46      2012-07-11
 - promote 1.45_00 to official release

1.45_00   2012-06-21

 [CHANGE IN BEHAVIOUR]

 - In future versions of DBD::Oracle ora_verbose will be changed
   so that it is simply a switch to turn DBI's DBD tracing on or off.
   A true value will turn it on and a false value will turn it off.
   DBI's "DBD" tracing was not available when ora_verbose was created
   and ora_verbose adds an additional test to every trace test.

 [BUG FIXES]

 - Fixed RT76695 - offset passed to ora_fetch_scroll should not affect
   normal fetches (Martin J. Evans)

 - Fixed RT76410 - fetch after fetch absolute always returns
   the same row (Martin J. Evans);

 - Fixed RT75721 - does not build with Oracle 9.2 (Martin J. Evans)

 - Fixed RT71343 - Oracle 9i does not have OCI_ATTR_TAF_ENABLED
   or OCI_ATTR_RESERVED_15/16 so cannot build (Martin J. Evans)

 - skip 24implicit_utf8.t if chr set is not UTF-8 (Martin J. Evans)

 - Fixed RT76269 - ora_taf_sleep was documented as taf_sleep by
   accident. There was no way to stop the TAF reconnect attempts.